Setup environment configuration for Vercel

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "node build.js && ng build",
+    "build:prod": "node build.js && ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "vercel-build": "node build.js && ng build --configuration production"
   },
   "private": true,
   "dependencies": {
