--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,14 @@
-# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
-src/environment.ts
 # Compiled output
 /dist
 /tmp
 /out-tsc
 /bazel-out
 
-# Node
-/node_modules
-npm-debug.log
-yarn-error.log
+# Node dependencies
+node_modules/
 
 # IDEs and editors
+.vscode/
 .idea/
 .project
 .classpath
@@ -40,3 +37,11 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Environment files
+/src/environments/environment.ts
+/src/environments/environment.prod.ts
+*.env
+.env
+.env.local
+.env.production
