fix: add build.js to vercel buildCommand

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "destination": "/index.html"
     }
   ],
-  "buildCommand": "ng build --configuration production",
+  "buildCommand": "node build.js && ng build --configuration production",
   "outputDirectory": "dist/todo-pro-application",
   "installCommand": "npm install",
   "framework": "angular"
