fix: improve Angular routing in Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot|otf|map|json))$",
+      "headers": { "cache-control": "max-age=31536000" }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ],
   "buildCommand": "node build.js && ng build --configuration production",
